...

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/add_teammates_button"
                        android:layout_width="150dp"
                        android:layout_height="48dp"
                        android:layout_marginStart="32dp"
                        android:backgroundTint="@color/button_color"
                        android:fontFamily="@font/poppins"
                        android:text="@string/add_teammate"
...
                        app:cornerRadius="8dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/upload_photo_button"
                        android:layout_width="150dp"
                        android:layout_height="48dp"
                        android:layout_marginEnd="36dp"
                        android:backgroundTint="@color/button_color"
                        android:fontFamily="@font/poppins"
                        android:text="@string/upload_photo"
...
                        app:layout_constraintStart_toEndOf="@+id/add_teammates_button"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/region_dropdown_menu"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="72dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="32dp"
...
                    app:hintTextColor="@color/textColor"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/upload_photo_button">

                    <AutoCompleteTextView
                        android:id="@+id/region_dropdown_item"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none" />
                </com.google.android.material.textfield.TextInputLayout>

                <FrameLayout
...
                    app:layout_constraintHorizontal_bias="0.462"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/region_dropdown_menu"
                    app:layout_constraintVertical_bias="0.0" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/confirm_button"
                    android:layout_width="311dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/button_color"
                    android:fontFamily="@font/poppins"
                    android:gravity="center"
...
